--- a/rm/style.css
+++ b/rm/style.css
@@ -42,4 +42,14 @@
     /* height: 30px; */
     border-bottom: 1px solid #000;
     margin: 20px 0px;
+    display: flex;
+    gap: 20px;
+}
+
+.border-red {
+    border-bottom: 5px solid red;
+}
+
+.border-blue {
+    border-bottom: 5px solid blue;
 }
