--- a/clients/Login/style.css
+++ b/clients/Login/style.css
@@ -17,11 +17,14 @@ body {
     width: 40%;
     background-color: white;
     height: 585px;
+
     }
     .Right{
     float: right;
     height: 585px;
     width: 60%;
+    padding-block: 8px;
+    border: 3px solid red;
 
     }
     .Body{
@@ -49,4 +52,7 @@ input[type=text], input[type=password] {
     outline: none;
   }
   * {box-sizing: border-box}
-   
+
+  input[type=text], input[type=fname] {
+    border-color: red;
+  }
