--- a/clients/Login/style.css
+++ b/clients/Login/style.css
@@ -82,6 +82,6 @@ input[type=text]:focus, input[type=password]:focus {
 }
 
 .onboarding-image {
-  height: 100%;
-  width: 100%;
+  height: inherit;
+  width: inherit;
 }
