Create client and ideas loading page

--- a/rm/style.css
+++ b/rm/style.css
@@ -141,3 +141,31 @@
     text-decoration: none;
     cursor: pointer;
   }
+
+/* Idea page styles */
+#ideas {
+    padding: 0 5px;
+}
+
+  /* Client page styles */
+#clients {
+    padding: 0 5px;
+}
+
+table {
+    border: 1px solid black;
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+  
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
