--- a/clients/dashboard.css
+++ b/clients/dashboard.css
@@ -1,29 +1,54 @@
-.left{
-    float:left; 
-    width: 15%;
-    background-color: white;
-    height: 580px;
-    padding-block: 8px;
-    border: 2px solid red;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
-    }
-    .right{
-    float: right;
-    height: 580px;
-    width: 84.2%;
-    padding-block: 8px;
-    border: 2px solid red;
-    }
-    .header{
-        float: top;
-        height: 100px;
-        width: 100;
-        padding-block: 8px;
-        border: 3px solid red;
-        }
-        .w3-light-grey{
-            color: blueviolet;
-        }
-        .w3-container{
-          color: blue;  
-        }
+body {
+  /* border: 1px solid red; */
+  height: 100vh;
+  width: 100%;
+}
+
+.wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* position: relative; */
+
+}
+
+/* Header styles */
+
+
+
+/* Product Section Styles */
+
+.side-profile {
+  /* height: 50px;
+  width: 50px;
+  border-radius: 100%; */
+  text-align: center;
+}
+
+.side-profile > img {
+  height: 50px;
+  width: 50px;
+  border-radius: 100%;
+}
+
+
+
+/* Footer styles */
+footer {
+  /* position: absolute; */
+  /* bottom: 0; */
+  /* width: 100%; */
+  padding: 10px;
+}
+
+
+
+
+
