--- a/clients/dashboard.css
+++ b/clients/dashboard.css
@@ -11,6 +11,7 @@ body {
 }
 
 .wrapper {
+  font-family: TW Cen MT;
   height: 100%;
   width: 100%;
   display: flex;
@@ -24,6 +25,52 @@ body {
 
 
 /* Product Section Styles */
+/* product cards */
+.basic-instrument, .equity {
+  border: 1px solid red;
+  padding: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.card {
+  border: 1px solid black;
+  width: 200px;
+  padding: 5px;
+}
+
+.product-title, .product-type, .product-stock {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 5px;
+  /* border: 1px solid red; */
+}
+
+.product-symbol {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  font-size: 12px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.product-name {
+  font-weight: bold;
+}
+
+.product-cat, .product-group {
+  background-color: greenyellow;
+  padding: 3px;
+  font-size: 12px;
+  border: 1px solid black;
+}
+
 
 .side-profile {
   /* height: 50px;
