Product page restructured

--- a/rm/style.css
+++ b/rm/style.css
@@ -308,13 +308,9 @@ button {
 .product-details-preferences-2 {
     flex: 2;
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     gap: 15px;
 }
-
-/* .product-details-place {
-    gap: 15px;
-} */
 
 .product-details-recom {
     flex: 1;
@@ -323,3 +319,33 @@ button {
     gap: 10px;
 }
 
+/* Select industry styles */
+.industry-cat {
+    /* border: 1px solid red; */
+}
+
+.select-industry {
+    /* border: 1px solid blue; */
+    padding: 2px 0px;
+}
+
+.industry {
+    /* display: none; */
+}
+
+.sub-industry {
+    /* display: none; */
+    margin-left: 15px;
+}
+
+.present {
+    background: #ddd;
+    padding: 3px;
+    font-size: 12px;
+    border-radius: 5px;
+}
+
+.showit {
+    /* display: none; */
+    color: red;
+}
