Fix bug causing javascript codes to load before html codes

--- a/rm/style.css
+++ b/rm/style.css
@@ -48,9 +48,13 @@
     gap: 20px;
 }
 
-.border-red {
+.tablink.active {
+    background: green;
     border-bottom: 5px solid red;
 }
+
+/* .border-red {
+} */
 
 .border-blue {
     border-bottom: 5px solid blue;
