--- a/rm/style.css
+++ b/rm/style.css
@@ -61,8 +61,19 @@
 
 .products {
     padding: 10px;
+    width: 100%;
     display: flex;
+    /* gap: 10px; */
+    /* border: 4px solid red; */
+}
+
+.cards {
+    width: 100%;
+    display: grid;
     gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    /* flex: 1; */
+    overflow: auto;
 }
 
 .card {
@@ -71,7 +82,7 @@
     padding: 5px;
 }
 
-.product-title, .product-type, .product-stock {
+.product-title, .product-stock {
     display: flex;
     gap: 10px;
     align-items: center;
@@ -101,6 +112,7 @@
     padding: 3px;
     font-size: 12px;
     border: 1px solid black;
+    width: fit-content;
 }
 
 
