--- a/fa/style3.css
+++ b/fa/style3.css
@@ -1,48 +1,131 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
-    width: 500px;
-    margin: 50px auto;
-  }
-  
-  h1 {
-    text-align: center;
-    margin-bottom: 50px;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-    width: 100%;
-  }
-  
-  label {
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  input[type="text"] {
-    padding: 10px;
-    font-size: 16px;
-    width: 100%;
-  }
-  
-  button[type="submit"] {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: blue;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  border: 1px solid red;
+  display: flex;
+}
+
+.sidebar {
+  border: 1px solid blue;
+  flex: 1;
+}
+
+.rm {
+  text-align: center;
+  padding: 20px;
+  border-bottom: 1px solid #000;
+}
+
+.photo {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+}
+
+.main {
+  border: 1px solid green;
+  flex: 5;
+}
+
+/* .container {
+  background-color: rgb(255, 248, 240);
+  height: 100%;
+} */
+.header {
+  color: red;
+  text-align: center;
+  padding: 5px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+form {
+  background-color: darksalmon;
+  /* background-image: url("https: //encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEEuSKv1VSK9XoW7PdK-Lpm0TmcW6RfFL9Xw&usqp=CAU"); */
+  border: 2px solid #161715;
+  box-shadow: 2px 2px 5px rgba(148, 104, 73, 0.6);
+  border-radius: 5px;
+  overflow: hidden;
+  width: 50%;
+  padding: 5px;
+  margin: 0 auto;
+}
+
+.form-group {
+  width: 60%;
+  margin: 5px 5px 15px 0;
+  display: inline-block;
+  font-size: medium;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+label {
+  display: inline-block;
+  width: 30%;
+  text-align: center;
+  font-size: 1.2em;
+}
+
+input {
+  width: 60%;
+  height: 20%;
+  font: 1.2em;
+  box-sizing: border-box;
+  border: 2px solid #261f1f;
+}
+
+input:focus {
+  border: 3px solid #b65858;
+  border-radius: 8px;
+}
+
+hr {
+  overflow: visible;
+  height: 30px;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px 0 0 0;
+  border-radius: 20px;
+}
+
+hr:before {
+  display: block;
+  content: "";
+  height: 30px;
+  margin-top: -31px;
+  border-style: solid;
+  border-color: black;
+  border-width: 0 0 1px 0;
+  border-radius: 20px;
+}
+
+button {
+  background-color: rgb(190, 127, 127);
+  border: 2px solid #423636;
+  border-radius: 5px;
+  color: white;
+  font-size: 1.5em;
+  padding: 10px 20px;
+  cursor: pointer;
+  align-items: center;
+  width: 100%;
+}
+
+button:hover {
+  background-color: rgb(232, 151, 151);
+  border: 2px solid #765757;
+  border-radius: 5px;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  align-items: center;
+}
