--- a/clients/front_end/dashboard.css
+++ b/clients/front_end/dashboard.css
@@ -8,6 +8,7 @@ body {
   /* border: 1px solid red; */
   height: 100vh;
   width: 100%;
+  font-family: "Tw Cen MT", sans-serif;
 }
 
 .wrapper {
@@ -26,7 +27,7 @@ body {
 
 /* Product Section Styles */
 /* product cards */
-.basic-instrument, .equity {
+.tailored_products, .equity {
   border: 1px solid red;
   padding: 10px;
   display: flex;
@@ -94,8 +95,6 @@ footer {
   /* width: 100%; */
   padding: 10px;
 }
-
-
 
 
 
