--- a/rm/style.css
+++ b/rm/style.css
@@ -64,14 +64,14 @@
     width: 100%;
     display: flex;
     /* gap: 10px; */
-    /* border: 4px solid red; */
 }
 
 .cards {
     width: 100%;
     display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 50px));
+    border: 4px solid red;
     /* flex: 1; */
     overflow: auto;
 }
@@ -192,7 +192,7 @@ button {
 
 .product-details-r1 {
     /* border: 1px solid black;     */
-    gap: 20px;
+    gap: 10px;
 }
 
 .product-details-tag {
