--- a/rm/style.css
+++ b/rm/style.css
@@ -71,7 +71,7 @@
     display: grid;
     gap: 30px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 50px));
-    border: 4px solid red;
+    /* border: 4px solid red; */
     /* flex: 1; */
     overflow: auto;
 }
