--- a/rm/style.css
+++ b/rm/style.css
@@ -1,3 +1,4 @@
+/* Stylesheet for RM user interface */
 * {
     padding: 0;
     margin: 0;
@@ -52,9 +53,6 @@
     background: green;
 }
 
-/* .border-red {
-} */
-
 .border-blue {
     border-bottom: 5px solid blue;
 }
@@ -71,8 +69,6 @@
     display: grid;
     gap: 30px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 50px));
-    /* border: 4px solid red; */
-    /* flex: 1; */
     overflow: auto;
 }
 
@@ -191,7 +187,6 @@ button {
 }
 
 .product-details-r1 {
-    /* border: 1px solid black;     */
     gap: 10px;
 }
 
@@ -278,7 +273,7 @@ button {
   background-color: #f2f2f2;
 }
 
-/*  */
+/* Product page */
 .product-details-r2 {
     margin: 20px 0;
 }
@@ -325,22 +320,11 @@ button {
     gap: 10px;
 }
 
-/* Select industry styles */
-.industry-cat {
-    /* border: 1px solid red; */
-}
-
 .select-industry {
-    /* border: 1px solid blue; */
     padding: 2px 0px;
 }
 
-.industry {
-    /* display: none; */
-}
-
 .sub-industry {
-    /* display: none; */
     margin-left: 15px;
 }
 
@@ -352,6 +336,5 @@ button {
 }
 
 .showit {
-    /* display: none; */
     color: red;
 }
